# python-project-lvl2

./: .gitignore  .travis.yml  Makefile  README.md  pyproject.toml  setup.cfg
.github/: dependabot.yml
.github/workflows/: pyci.yml
gendiff/: __init__.py  ast_builder.py  cli.py  comparator.py  constants.py  generator.py  input_parser.py
gendiff/formatters/: __init__.py  json.py  plain.py  string.py
gendiff/renderers/: __init__.py  render.py  render_json.py  render_plain.py  render_string.py
gendiff/scripts/: __init__.py  gendiff.py
tests/: expected.py  expected_results.py  test_basics.py  test_json_diff.py  test_yaml_diff.py
tests/fixtures/: complex_after.yaml  complex_before.yaml
