[tool.poetry]
name = "altvec_gendiff"
version = "0.3.4"
description = "Show diff between two files"
authors = ["altvec <me@sergeykalistratov.com>"]
license = "MIT"
packages = [
    { include = "gendiff" },
]
classifiers = [
    "Topic :: Education",
    "Programming Language :: Python :: 3"
]

[tool.poetry.dependencies]
python = "^3.6"
pyyaml = "^5.1"

[tool.poetry.dev-dependencies]
pytest = "^5.4"
wemake-python-styleguide = "^0.8.1"
flake8 = "^3.7"
pydocstyle = "<4"
coverage = "^5.1"
pytest-cov = "^2.9.0"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
