[tool.poetry]
name = "altvec_gendiff"
version = "0.3.4"
description = "Show diff between two files"
authors = ["altvec <me@sergeykalistratov.com>"]
license = "MIT"
packages = [
    { include = "gendiff" },
]
classifiers = [
    "Topic :: Education",
    "Programming Language :: Python :: 3"
]

[tool.poetry.dependencies]
python = "^3.8"
pyyaml = "^5.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
wemake-python-styleguide = "^0.14.1"
coverage = "^5.3"
pytest-cov = "^2.10.1"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
